fix double scroll

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h3 a:hover {
     position: relative;
     margin: auto;
 
-    overflow:scroll;
+    overflow-y: scroll;
   }
   
   .slideshow img {
